--- a/collegediary/WebContent/htmls/login/sign-up.html
+++ b/collegediary/WebContent/htmls/login/sign-up.html
@@ -1,46 +1,74 @@
+<link href="css/sign-up.css" rel="stylesheet">
 <div class="container">
-	<div class="row">
-		<div class="col-md-8">
-			<img class="featurette-image img-responsive" height="500px"
-				width="500px" alt="College Diary" src="images/Slide1.JPG">
-		</div>
-		<div class="col-md-4">
-			<div class="container" ng-controller="newAccountController">
-				<form class="form-signin" role="form">
-					<h2 class="form-signin-heading">Create your account</h2>
-					<div class="row">
-						<div class="col-md-1">
-							<input type="text" class="form-control" placeholder="First Name"
-								required>
-						</div>
-						<div class="col-md-1">
-							<input type="text" class="form-control" placeholder="Last Name">
+	<div class="col-md-7">
+		<img class="featurette-image img-responsive" height="500px"
+			width="500px" alt="College Diary" src="images/Slide1.JPG">
+	</div>
+	<div class="col-md-5">
+		<div class="container"	ng-controller="newAccountController">
+			<form class="form-horizontal" role="form" name="sign-upForm">
+				<h2 class="form-signin-heading">Create your account</h2>
+
+				<div class="form-group">
+					<div class="col-sm-2">
+						<input ng-model="form.userDetails.firstName" type="text" class="form-control" id="firstName"	placeholder="First Name" required>
+					</div>
+					<div class="col-sm-2">
+						<input ng-model="form.userDetails.lastName" type="text" class="form-control" id="lastName" placeholder="Last Name">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-sm-4">
+						<input ng-model="form.masterUser.email" type="email" class="form-control" id="email"	placeholder="Email">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-sm-4">
+						<input ng-model="form.confirmEmail" email type="email" class="form-control" id="confirmEmail"	placeholder="Confirm your email">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-sm-4">
+						<input ng-model="form.masterUser.password" type="password" class="form-control" id="password" placeholder="Your Password">
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-4">
+						<label for="dateofbirth">You were born on</label>
+						<input ng-model="form.userDetails.dateofbirth"	type="date" class="form-control" id="dateofbirth">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-sm-1">
+						<div class="radio">
+							<label> <input ng-model=form.userDetails.sex type="radio" name="sex" id="male"
+								value="male">Male</label>
 						</div>
 					</div>
-
-					<div class="row">
-						<div class="col-md-1">
-							<input type="text" class="form-control" placeholder="Email"
-								required>
+					<div class="col-sm-1">
+						<div class="radio">
+							<label> <input ng-model=form.userDetails.sex type="radio" name="sex" id="female"
+								value="female">Female</label>
 						</div>
 					</div>
-
-					<div class="row">
-						<div class="col-md-1">
-							<input type="text" class="form-control"
-								placeholder="Re-enter Email" required>
+					<div class="col-sm-1">
+						<div class="radio">
+							<label> <input ng-model=form.userDetails.sex type="radio" name="sex" id="others"
+								value="others">Others</label>
 						</div>
 					</div>
+				</div>
+				
+				<div class="form-group">
+					<div class="col-sm-4">
+						<button ng-click="signUp()" type="button" class="btn btn-primary btn-lg">Sign Up</button>					</div>
+				</div>
 
-					<div class="row">
-						<div class="col-md-1">
-							<input type="password" " class="form-control"
-								placeholder="New Password" required>
-						</div>
-					</div>
-
-				</form>
-			</div>
+			</form>
 		</div>
 	</div>
 </div>
