adding Email Notifier and pagination component

--- a/collegediary/WebContent/index.html
+++ b/collegediary/WebContent/index.html
@@ -24,12 +24,14 @@
 <script src="vendors/bootstrap/bootbox/bootbox.js"></script>
 <script src="vendors/angular/angular.js"></script>
 <script src="vendors/angular/angular-route.js"></script>
+<script src="vendors/angular/angular-cookies.js"></script>
 <!-- Vendor Scripts End -->
 
 <!-- Controllers Start -->
 <script src="scripts/routes.js"></script>
 <script src="scripts/userControllers/loginController.js"></script>
 <script src="scripts/userControllers/newAccountController.js"></script>
+<script src="scripts/userControllers/additionalInfoController.js"></script>
 <!-- Controllers Start -->
 
 </head>
