--- a/collegediary/WebContent/index.html
+++ b/collegediary/WebContent/index.html
@@ -27,13 +27,22 @@
 <script src="vendors/angular/angular-cookies.js"></script>
 <!-- Vendor Scripts End -->
 
-<!-- Controllers Start -->
+<!-- Services Scripts End -->
+<script src="scripts/services/mainService.js"></script>
+<script src="scripts/services/topBarService.js"></script>
+<script src="scripts/services/commonService.js"></script>
+<!-- Services Scripts End -->
+
+<!-- routes End -->
 <script src="scripts/routes.js"></script>
+<!-- routes Scripts End -->
+
+
+<!-- Controllers Start -->
 <script src="scripts/userControllers/loginController.js"></script>
 <script src="scripts/userControllers/newAccountController.js"></script>
 <script src="scripts/userControllers/additionalInfoController.js"></script>
-<!-- Controllers Start -->
-
+<!-- Controllers End -->
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
