--- a/collegediary/WebContent/htmls/fileUploads/webcamUpload.html
+++ b/collegediary/WebContent/htmls/fileUploads/webcamUpload.html
@@ -1,5 +1,5 @@
 <link href="css/sign-up.css" rel="stylesheet">
-<div class="container">
+<div class="container" ng-controller="webcamUploadController">
 	<div style="width: 330px; float: left;">
 		<div id="webcam"></div>
 			<div style="margin: 5px;">
@@ -8,10 +8,10 @@
 		</div>
 	
 		<div style="width: 200px; float: left;">
-			<form method="post" id="webcamUpload" action="rest/user/webcamUpload">
-				<p><textarea name="txtPic"  id="txtPic" style="width: 190px; height: 70px;display: none"></textarea></p>
+			<form method="post" id="webcamUpload">
+				<p><textarea name="txtPic" ng-model="form.masterUser.image"  id="txtPic" style="width: 190px; height: 70px;"></textarea></p>
 				<p><img id="image" style="width: 200px; height: 153px;" /></p>
-				<button class="btn btn-primary btn-lg" type="submit" id="btnSnapshot" onclick="base64_tofield()">Take Snapshot</button>
+				<button class="btn btn-primary btn-lg" id="btnSnapshot" ng-click="base64tofield()">Take Snapshot</button>
 			</form>
 		</div>
 	</div>
